# SHINE-mem

./: .gitignore  LoraQwen.py  README.md  case_test.py  meta_train_parallel.py  metanetwork_family.py  test.py
MemoryAgentBench/: .anon_id  .gitignore  (+13 more)
meta-past-worktree-rl/: .gitignore  .gitmodules  README.md  es_at_scale_commit.txt  eval_datasets.md  eval_samples.json  implementation_plan.md  proposal.md  pyproject.toml  shine_commit.txt
meta-past-worktree-rl/examples/: run_bbh_f1.sh  run_eval.sh  run_musique_f1.sh  run_musique_judge.sh  run_squad_f1.sh
meta-past-worktree-rl/meta_past/: shine_adapter.py
meta-past-worktree-rl/meta_past/anchor/: frobenius.py
meta-past-worktree-rl/meta_past/config/: es_squad_phase1.yaml  es_squad_run11.yaml  es_squad_run12.yaml  es_squad_run13.yaml  es_squad_run14.yaml  es_squad_smoke.yaml  rl_bbh_grpo.yaml  rl_bbh_grpo_think.yaml  rl_musique_grpo.yaml  rl_musique_grpo_judge.yaml  rl_musique_grpo_think.yaml  rl_squad_grpo.yaml  rl_squad_grpo_think.yaml
meta-past-worktree-rl/scripts/: check_param_displacement.py  compare_eval.py  debug_m2p_fine.py  debug_perturb_sweep.py  debug_rms_relative.py  debug_subgroup_sweep.py  eval.py  fetch_eval_samples.py  inspect_rms.py  judge_server.py  phase0_sanity.py  phase1_es_squad.py  post_run_analysis.sh  probe_force_think.py  render_eval_md.py  run_eval.py  smoke_es_squad.py  summarize_run.py  sweep_eval.sh  train.py
meta-past-worktree-rl/tests/: test_anchor.py  test_batched_rollout.py  test_es_perturb.py  test_es_update.py  test_lora_format.py  test_rl_advantages.py  test_shine_adapter.py
(+459 files in other folders)
